meecast (0.8.1) unstable; urgency=low

  * Updated  Norwegian translation

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Nov 2013 20:31:23 +0200


meecast (0.8) unstable; urgency=low

  * Added Perth to bom.gov.au source
  * Fixed problem with long name of station in LockWallpaper widget 
  * Added icons for openweathermap.com source
  * Added new measure units for wind speed - Knots and Beaufort scale
  * Updated Arabic, Serbian, Ukrain, Norwegian, Catalan, Finish, Spanish languages

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Nov 2013 20:31:23 +0200

meecast (0.7.9) unstable; urgency=low

  * Added icon for openweathermap.com 
  * Fixed problem with foreca.com
  * Fixed problem with source weather.com
  * Updated Russian, Dutch translations
  * Added Ukraine translation

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 27 Oct 2013 18:31:23 +0200

meecast (0.7.6) unstable; urgency=low

  * Added icon for openweathermap.com and gismeteo.ru
  * Added hourly forecast for openweathermap.org source 
  * Fixed problem with hourly forecast
  * Moved to new data structure in foreca.mobi converter
  * Added South Korea to foreca.com database
  * Added many stations to gismeteo.ru 
  * Updated Arabic, Catalan, Chinese(Taiwan), Chinese, Dutch, Finnish, Norwegian, Serbian, Spanish, Finish, French, Swedish, German, Portuguese

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 16 Sep 2013 18:31:23 +0200

meecast (0.7.5) unstable; urgency=low

  * Added icon for openweathermap.com
  * Fixed problem with current weather in foreca.com source
  * Updated Russian translations
  * Added Chinese(Taiwan), Chinese (Hong Kong) translations
  * Fixed problem with Chinese translation
  * Added translators of Spanish and Chines (Taiwan) 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Aug 2013 22:31:23 +0200


meecast (0.7.4) unstable; urgency=low

  * Added description strings and icon to gismeteo.ru 
  * Added icon for foreca.com
  * Fixed problem with updating
  * Added icon for openweathermap.org 