@@ -1,6 +1,7 @@
 meecast (0.8.1) unstable; urgency=low
 
-  * Updated  Norwegian translation
+  * Updated Norwegian translation
+  * Fixed problem with negative temperature in foreca.com source
 
  -- Vlad Vasiliev <vlad@gas.by>  Wed, 13 Nov 2013 20:31:23 +0200
 
